--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "private": true,
   "scripts": {
     "gateway:dev": "yarn workspace @backend/gateway dev",
+    "dashboard:dev": "yarn workspace @frontend/dashboard dev",
     "typecheck": "lerna run typecheck",
     "lint": "tslint --project tsconfig.json -c tslint.json -t codeFrame backend/**/*.ts"
   },
   "workspaces": [
     "backend/*",
+    "frontend/ui/*",
+    "frontend/utils/*",
     "frontend/*"
   ],
   "devDependencies": {
